fix : made necessary changes